// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders casey 1`] = `
<Flex
  align="center"
  direction="column"
  justify="center"
  self="stretch"
  style={
    Object {
      "backgroundColor": "#007398",
    }
  }
  value={1}
>
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 24,
      }
    }
  >
    BEN
  </MyText>
  <PillButton
    buttonTextStyle={
      Object {
        "color": "#ffffff",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
    filled={true}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FF5532",
        "height": 36,
        "margin": 10,
        "marginBottom": 5,
      }
    }
    text="SELECT STAGE"
  />
  <SecondaryTabBar
    isMe={false}
    onChangeStage={[MockFunction]}
    onOpenHeader={[Function]}
    onShrinkHeader={[Function]}
    person={
      Object {
        "email_addresses": Array [],
        "first_name": "ben",
        "id": "1",
        "phone_numbers": Array [],
      }
    }
    tabs={
      Array [
        Object {
          "iconName": "stepsIcon",
          "page": "steps",
          "tabLabel": "My Steps",
          "tracking": Object {
            "level3": "steps",
            "name": "people : person : steps",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "journeyIcon",
          "page": "journey",
          "tabLabel": "Our Journey",
          "tracking": Object {
            "level3": "journey",
            "name": "people : person : journey",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "notesIcon",
          "page": "notes",
          "tabLabel": "My Notes",
          "tracking": Object {
            "level3": "notes",
            "name": "people : person : notes",
            "section": "people",
            "subsection": "person",
          },
        },
      ]
    }
  />
</Flex>
`;

exports[`renders jean 1`] = `
<Flex
  align="center"
  direction="column"
  justify="center"
  self="stretch"
  style={
    Object {
      "backgroundColor": "#007398",
    }
  }
  value={1}
>
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 24,
      }
    }
  >
    BEN
  </MyText>
  <PillButton
    buttonTextStyle={
      Object {
        "color": "#ffffff",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
    filled={true}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FF5532",
        "height": 36,
        "margin": 10,
        "marginBottom": 5,
      }
    }
    text="SELECT STAGE"
  />
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="textIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 24,
            "opacity": 0.5,
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="callIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 24,
            "opacity": 0.5,
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="emailIcon"
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#52C5DC",
              "fontSize": 24,
              "opacity": 0.5,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
        type="MissionHub"
      />
    </Flex>
  </Flex>
  <SecondaryTabBar
    isMe={false}
    onChangeStage={[MockFunction]}
    onOpenHeader={[Function]}
    onShrinkHeader={[Function]}
    organization={
      Object {
        "id": "10",
        "name": "Test Org",
      }
    }
    person={
      Object {
        "email_addresses": Array [],
        "first_name": "ben",
        "id": "1",
        "phone_numbers": Array [],
      }
    }
    tabs={
      Array [
        Object {
          "iconName": "stepsIcon",
          "page": "steps",
          "tabLabel": "My Steps",
          "tracking": Object {
            "level3": "steps",
            "name": "people : person : steps",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "actionsIcon",
          "page": "actions",
          "tabLabel": "My Actions",
          "tracking": Object {
            "level3": "actions",
            "name": "people : person : actions",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "journeyIcon",
          "page": "journey",
          "tabLabel": "Our Journey",
          "tracking": Object {
            "level3": "journey",
            "name": "people : person : journey",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "notesIcon",
          "page": "notes",
          "tabLabel": "My Notes",
          "tracking": Object {
            "level3": "notes",
            "name": "people : person : notes",
            "section": "people",
            "subsection": "person",
          },
        },
      ]
    }
  />
</Flex>
`;

exports[`renders jean with a missionhub user as contact 1`] = `
<Flex
  align="center"
  direction="column"
  justify="center"
  self="stretch"
  style={
    Object {
      "backgroundColor": "#007398",
    }
  }
  value={1}
>
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 24,
      }
    }
  >
    BEN
  </MyText>
  <PillButton
    buttonTextStyle={
      Object {
        "color": "#ffffff",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
    filled={true}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FF5532",
        "height": 36,
        "margin": 10,
        "marginBottom": 5,
      }
    }
    text="SELECT STAGE"
  />
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="textIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 24,
            "opacity": 0.5,
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="callIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 24,
            "opacity": 0.5,
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="emailIcon"
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#52C5DC",
              "fontSize": 24,
              "opacity": 0.5,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
        type="MissionHub"
      />
    </Flex>
  </Flex>
  <SecondaryTabBar
    isMe={false}
    onChangeStage={[MockFunction]}
    onOpenHeader={[Function]}
    onShrinkHeader={[Function]}
    organization={
      Object {
        "id": "10",
        "name": "Test Org",
      }
    }
    person={
      Object {
        "email_addresses": Array [],
        "first_name": "ben",
        "id": "1",
        "phone_numbers": Array [],
      }
    }
    tabs={
      Array [
        Object {
          "iconName": "stepsIcon",
          "page": "steps",
          "tabLabel": "My Steps",
          "tracking": Object {
            "level3": "steps",
            "name": "people : person : steps",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "actionsIcon",
          "page": "actions",
          "tabLabel": "My Actions",
          "tracking": Object {
            "level3": "actions",
            "name": "people : person : actions",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "journeyIcon",
          "page": "journey",
          "tabLabel": "Our Journey",
          "tracking": Object {
            "level3": "journey",
            "name": "people : person : journey",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "notesIcon",
          "page": "notes",
          "tabLabel": "My Notes",
          "tracking": Object {
            "level3": "notes",
            "name": "people : person : notes",
            "section": "people",
            "subsection": "person",
          },
        },
        Object {
          "iconName": "impactIcon",
          "page": "userImpact",
          "tabLabel": "Impact",
          "tracking": Object {
            "level3": "impact",
            "name": "people : person : impact",
            "section": "people",
            "subsection": "person",
          },
        },
      ]
    }
  />
</Flex>
`;

exports[`renders me 1`] = `
<Flex
  align="center"
  direction="column"
  justify="center"
  self="stretch"
  style={
    Object {
      "backgroundColor": "#007398",
    }
  }
  value={1}
>
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 24,
      }
    }
  >
    BEN
  </MyText>
  <PillButton
    buttonTextStyle={
      Object {
        "color": "#ffffff",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
    filled={true}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "#FF5532",
        "height": 36,
        "margin": 10,
        "marginBottom": 5,
      }
    }
    text="SELECT STAGE"
  />
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="textIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 24,
            "opacity": 0.5,
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="callIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 24,
            "opacity": 0.5,
          }
        }
        type="MissionHub"
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 25,
          "height": 48,
          "margin": 10,
          "width": 48,
        }
      }
    >
      <IconButton
        disabled={true}
        name="emailIcon"
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#52C5DC",
              "fontSize": 24,
              "opacity": 0.5,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
        type="MissionHub"
      />
    </Flex>
  </Flex>
  <SecondaryTabBar
    isMe={true}
    onChangeStage={[MockFunction]}
    onOpenHeader={[Function]}
    onShrinkHeader={[Function]}
    person={
      Object {
        "email_addresses": Array [],
        "first_name": "ben",
        "id": "1",
        "phone_numbers": Array [],
      }
    }
    tabs={
      Array [
        Object {
          "iconName": "stepsIcon",
          "page": "steps",
          "tabLabel": "My Steps",
          "tracking": Object {
            "level3": "steps",
            "name": "people : self : steps",
            "section": "people",
            "subsection": "self",
          },
        },
        Object {
          "iconName": "journeyIcon",
          "page": "journey",
          "tabLabel": "My Journey",
          "tracking": Object {
            "level3": "journey",
            "name": "people : self : journey",
            "section": "people",
            "subsection": "self",
          },
        },
        Object {
          "iconName": "impactIcon",
          "page": "userImpact",
          "tabLabel": "Impact",
          "tracking": Object {
            "level3": "impact",
            "name": "people : person : impact",
            "section": "people",
            "subsection": "person",
          },
        },
      ]
    }
  />
</Flex>
`;
